@@ -1,3 +1,12 @@
+2004-03-10  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/plugins/WebPage.py: Clean up mini tree. Add connecting lines.
+	Switch from list of 2^gen strings to a dict with only used entries.
+	Clean up generation SpinButton in the dialog.
+
+2004-03-10  Leonid Mamtchenkov  <leonid@leonid.maks.net>
+	* src/plugins/WebPage.py: Link main photo to the original.
+	Use alt strings. Mini tree for many generations.
+
 2004-03-09  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/PeopleModel.py: Column reordering/selection
 	* src/PeopleView.py: Column reordering/selection
